# copied-pasted-isolated

./: CMakeLists.txt  main.cpp
